# packages/api/internal/handlers/volumecontent_dircreate.go
@@ -1,0 +1,11 @@
+package handlers
+
+import (
+	"github.com/e2b-dev/infra/packages/api/internal/api"
+	"github.com/gin-gonic/gin"
+)
+
+func (a *APIStore) PostVolumesVolumeIDDir(c *gin.Context, volumeID api.VolumeID, params api.PostVolumesVolumeIDDirParams) {
+	//TODO implement me
+	panic("implement me")
+}
