# packages/api/internal/handlers/volumecontent_dirdelete.go
@@ -1,0 +1,11 @@
+package handlers
+
+import (
+	"github.com/e2b-dev/infra/packages/api/internal/api"
+	"github.com/gin-gonic/gin"
+)
+
+func (a *APIStore) DeleteVolumesVolumeIDDir(c *gin.Context, volumeID api.VolumeID, params api.DeleteVolumesVolumeIDDirParams) {
+	//TODO implement me
+	panic("implement me")
+}
