# packages/api/internal/handlers/volumecontent_dirlist.go
@@ -1,0 +1,11 @@
+package handlers
+
+import (
+	"github.com/e2b-dev/infra/packages/api/internal/api"
+	"github.com/gin-gonic/gin"
+)
+
+func (a *APIStore) GetVolumesVolumeIDDir(c *gin.Context, volumeID api.VolumeID, params api.GetVolumesVolumeIDDirParams) {
+	//TODO implement me
+	panic("implement me")
+}
