# packages/api/internal/handlers/volumecontent_filecreate.go
@@ -1,0 +1,11 @@
+package handlers
+
+import (
+	"github.com/e2b-dev/infra/packages/api/internal/api"
+	"github.com/gin-gonic/gin"
+)
+
+func (a *APIStore) PostVolumesVolumeIDFile(c *gin.Context, volumeID api.VolumeID, params api.PostVolumesVolumeIDFileParams) {
+	//TODO implement me
+	panic("implement me")
+}
