# packages/api/internal/handlers/volumecontent_filedelete.go
@@ -1,0 +1,11 @@
+package handlers
+
+import (
+	"github.com/e2b-dev/infra/packages/api/internal/api"
+	"github.com/gin-gonic/gin"
+)
+
+func (a *APIStore) DeleteVolumesVolumeIDFile(c *gin.Context, volumeID api.VolumeID, params api.DeleteVolumesVolumeIDFileParams) {
+	//TODO implement me
+	panic("implement me")
+}
