# spec/openapi.yml
@@ -100,6 +100,12 @@ components:
       required: false
       schema:
         type: string
+    path:
+      name: path
+      in: query
+      required: true
+      schema:
+        type: string
     volumeID:
       name: volumeID
       in: path
@@ -1686,6 +1692,38 @@ components:
       required:
         - name
 
+    VolumeDirectoryItem:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Name of the file or directory
+        isDirectory:
+          type: boolean
+          description: Whether the item is a directory
+        mode:
+          type: integer
+          description: File mode
+        size:
+          type: integer
+          description: File size in bytes
+        ctime:
+          type: string
+          format: date-time
+          description: Create time of the file or directory
+        mtime:
+          type: string
+          format: date-time
+          description: Last modification time of the file or directory
+
+    VolumeDirectoryListing:
+      type: object
+      properties:
+        files:
+          type: array
+          items:
+            $ref: "#/components/schemas/VolumeDirectoryItem"
+
 tags:
   - name: templates
   - name: sandboxes
@@ -3110,5 +3148,133 @@ paths:
           $ref: "#/components/responses/401"
         "404":
           $ref: "#/components/responses/404"
+        "500":
+          $ref: "#/components/responses/500"
+
+  /volumes/{volumeID}/dir:
+    get:
+      description: List directory contents
+      tags: [volume_content]
+      security:
+        - AccessTokenAuth: []
+        - ApiKeyAuth: []
+        - Supabase1TokenAuth: []
+          Supabase2TeamAuth: []
+      parameters:
+        - $ref: "#/components/parameters/volumeID"
+        - $ref: "#/components/parameters/path"
+      responses:
+        "200":
+          description: "Successfully retrieved a directory listing"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/VolumeDirectoryListing"
+        "404":
+          description: "path not found"
+        "500":
+          $ref: "#/components/responses/500"        
+    post:
+      description: List directory contents
+      tags: [volume_content]
+      security:
+        - AccessTokenAuth: []
+        - ApiKeyAuth: []
+        - Supabase1TokenAuth: []
+          Supabase2TeamAuth: []
+      parameters:
+        - $ref: "#/components/parameters/volumeID"
+        - $ref: "#/components/parameters/path"
+      responses:
+        "204":
+          description: "Successfully created a directory"
+        "404":
+          description: "path not found"
+        "500":
+          $ref: "#/components/responses/500"        
+    delete:
+      description: Delete a directory
+      tags: [volume_content]
+      security:
+        - AccessTokenAuth: []
+        - ApiKeyAuth: []
+        - Supabase1TokenAuth: []
+          Supabase2TeamAuth: []
+      parameters:
+        - $ref: "#/components/parameters/volumeID"
+        - $ref: "#/components/parameters/path"
+      responses:
+        "204":
+          description: "Successfully deleted a directory"
+        "404":
+          description: "path not found"
+        "500":
+          $ref: "#/components/responses/500"
+
+  /volumes/{volumeID}/file:
+    get:
+      description: Download file
+      tags: [volume_content]
+      security:
+        - AccessTokenAuth: []
+        - ApiKeyAuth: []
+        - Supabase1TokenAuth: []
+          Supabase2TeamAuth: []
+      parameters:
+        - $ref: "#/components/parameters/volumeID"
+        - $ref: "#/components/parameters/path"
+      responses:
+        "200":
+          description: "Successfully downloaded a file"
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+        "404":
+          description: "path not found"
+        "500":
+          $ref: "#/components/responses/500"
+    post:
+      description: Create file
+      tags: [volume_content]
+      security:
+        - AccessTokenAuth: []
+        - ApiKeyAuth: []
+        - Supabase1TokenAuth: []
+          Supabase2TeamAuth: []
+      parameters:
+        - $ref: "#/components/parameters/volumeID"
+        - $ref: "#/components/parameters/path"
+      requestBody:
+        required: true
+        content:
+          application/octet-stream:
+            schema:
+              type: string
+              format: binary
+      responses:
+        "200":
+          description: "Successfully created a file"
+        "404":
+          description: "path not found"
+        "500":
+          $ref: "#/components/responses/500"
+    delete:
+      description: Delete a file
+      tags: [volume_content]
+      security:
+        - AccessTokenAuth: []
+        - ApiKeyAuth: []
+        - Supabase1TokenAuth: []
+          Supabase2TeamAuth: []
+      parameters:
+        - $ref: "#/components/parameters/volumeID"
+        - $ref: "#/components/parameters/path"
+      responses:
+        "204":
+          description: "Successfully deleted a file"
+        "404":
+          description: "path not found"
         "500":
           $ref: "#/components/responses/500"
